--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,10 @@
-tensorflow==2.12.0
-transformers==4.30.2
-tokenizers==0.13.3
-pandas==2.0.3
-numpy==1.23.5
-matplotlib==3.7.1
-scikit-learn==1.2.2
-seaborn==0.12.2
-regex==2023.6.3
-transformers
-flask
-emoji
-gunicorn
-streamlit
-requests>=2.28.0
-pathlib2>=2.3.0
+streamlit>=1.28.0
+pandas>=1.5.0
+numpy>=1.21.0
+scikit-learn>=1.1.0
+emoji>=2.0.0
+matplotlib>=3.5.0
+seaborn>=0.11.0
+transformers>=4.21.0
+# tensorflow is heavy—use only if you actually load models on Streamlit Cloud
+# tensorflow>=2.10.0
